[package]
authors = ["Wang Zishi <ynh.2@outlook.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "esp_rust_app"
version = "0.1.0"

[dependencies]
esp-backtrace = { version = "0.5.0", features = [
    "esp32c3",
    "panic-handler",
    "print-uart",
] }
# esp32c3-hal = {version = "0.5.0", features = ["rt", "ufmt", "vectored"]}
esp32c3-hal = { verion = "0.6.0", path = "esp-hal/esp32c3-hal", features = [
    "rt",
    "ufmt",
    "vectored",
] }
# esp-hal-common = { version = "0.6.0", path = "esp-hal/esp-hal-common", features = [
#     "esp32c3",
#     "ufmt",
#     "vectored",
# ] }
riscv-rt = { version = "0.11", optional = true }
critical-section = { version = "1.1.1" }

[features]
default = ["rt"]
rt = ["riscv-rt"]
