[package]
authors = ["Wang Zishi <ynh.2@outlook.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "esp_rust_app"
version = "0.1.0"

[dependencies]
# embedded-hal-nb = "1.0.0-alpha.1"
esp-backtrace = { version = "0.5.0", features = [
    "esp32c3",
    "panic-handler",
    "print-uart",
] }
# esp32c3-hal = {version = "0.5.0", features = ["rt", "vectored"]}
esp-hal-common = { version = "0.6.0", path = "esp-hal/esp-hal-common" }
esp32c3-hal = { verion = "0.6.0", path = "esp-hal/esp32c3-hal", features = [
    "rt",
    "vectored",
    "async",
    "embassy",
    "embassy-time-systick",
    # "embassy-time-timg0",
] }
embassy-time = { version = "0.1.0", features = ["nightly"] }
embedded-hal-1 = { version = "=1.0.0-alpha.9", package = "embedded-hal" }
embedded-hal-async = { version = "0.2.0-alpha.0" }
riscv-rt = { version = "0.11", optional = true }
critical-section = { version = "1.1.1" }
rmodbus = { version = "0.6.4", default-features = false, features = [
    "fullcontext",
    "fixedvec",
] }
fixedvec = "0.2.4"
embassy-executor = { package = "embassy-executor", git = "https://github.com/embassy-rs/embassy/", rev = "cd9a65b", features = [
    "nightly",
    "integrated-timers",
] }
static_cell = "1.0.0"

[dev-dependencies]
# esp-pacs = "*"

[features]
default = ["rt", "embassy-time-systick"]
rt = ["riscv-rt"]
server = []
client = []
embassy-time-systick = []
