[package]
authors = ["Wang Zishi <ynh.2@outlook.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "esp_rust_app"
version = "0.1.0"

[[bin]]
bench = false
name = "server"
test = false

[dependencies]
critical-section = {version = "1.1.1"}
embassy-executor = {package = "embassy-executor", git = "https://github.com/embassy-rs/embassy/", rev = "cd9a65b", features = [
  "nightly",
  "integrated-timers",
]}
embassy-time = {version = "0.1.0", features = ["nightly"]}
embedded-hal-1 = {version = "=1.0.0-alpha.9", package = "embedded-hal"}
embedded-hal-async = {version = "0.2.0-alpha.0"}
embedded-hal-nb = "1.0.0-alpha.1"
esp-backtrace = {version = "0.5.0", features = [
  "esp32c3",
  "panic-handler",
  "exception-handler",
  "print-uart",
]}
esp-println = {version = "0.4.0", features = ["esp32c3", "log"]}
esp32c3-hal = {verion = "0.7.0", features = [
  "rt",
  "eh1",
  "vectored",
  "async",
  "embassy",
  "embassy-time-systick",
]}
fixedvec = "0.2.4"
log = "0.4.17"
riscv-rt = {version = "0.11", optional = true}
rmodbus = {version = "0.6.4", default-features = false, features = [
  "fullcontext",
  "fixedvec",
]}
static_cell = "1.0.0"

[dev-dependencies]
# esp-pacs = "*"

[features]
client = []
default = ["rt", "embassy-time-systick"]
embassy-time-systick = []
rt = ["riscv-rt"]
server = []
